# obs-studio

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .rustfmt.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  App.vue  main.ts  main.tsx  vite-env.d.ts
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cmds/: locale.rs  mod.rs
src-tauri/src/graphics/: context.rs  device.rs  mod.rs  texture.rs
src-tauri/src/protocols/: mod.rs  stream.rs
src-tauri/src/ui/: layout.rs  menu.rs  mod.rs  tray.rs
src-tauri/src/utils/: cli.rs  config.rs  dialog.rs  locale.rs  log.rs  mod.rs  trans.rs
src/assets/styles/: base.css
src/utils/: log.ts
