[package]
name = "obs-studio"
version = "0.1.0"
description = "OBS Studio"
authors = ["xjkuchao@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "obs"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
thiserror = "^1.0"
anyhow = "^1.0"
lazy_static = "^1.5"
log = "^0.4"
once_cell = "^1.19"
fern = { version = "^0.6", features = ["colored", "date-based"] }
chrono = "^0.4"
sys-locale = "^0.3"
configparser = "^3.1"

reqwest = { version = "^0.12", features = ["json"] }
tokio = { version = "^1.39", features = ["full"] }
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

