[package]
name = "obs-studio"
version = "30.2.3"
description = "OBS Studio"
authors = ["xjkuchao@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "obs"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.3", features = [] }

[dependencies]
thiserror = "^1.0"
anyhow = "^1.0"
lazy_static = "^1.5"
log = "^0.4"
once_cell = "^1.19"
chrono = "^0.4"
sys-locale = "^0.3"
rust-ini = "^0.21"

tokio = { version = "^1.39", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

bytemuck = { version = "^1.17", features = ["derive"] }
glam = "^0.28"
image = { version = "^0.25", default-features = false, features = [
    "png",
    "jpeg",
] }

wgpu = { version = "^22.1", features = [] }
tauri = { version = "2.0.0-rc.3", features = [
    "config-json5",
    "tray-icon",
    "unstable",
] }
tauri-plugin-log = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.0.0-rc.0"
tauri-plugin-window-state = "2.0.0-rc.1"
